osamostatnění AresService